--- a/contacto/contacto.css
+++ b/contacto/contacto.css
@@ -48,26 +48,28 @@ textarea {
     resize: vertical;
 }
 
-button {
+#boton {
     display: block;
     width: 100%;
-    padding: 1rem;
+    padding: 15px;
     background-color: var(--secondary-color);
     color: var(--background-color);
     border: none;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1.1em;
     font-weight: bold;
     font-family: 'Press Start 2P', cursive;
     text-transform: uppercase;
     transition: all 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+} 
+
 
 button:hover {
     background-color: var(--accent-color);
     transform: translateY(-2px);
+    transition: 1s;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
