--- a/contacto/contacto.css
+++ b/contacto/contacto.css
@@ -31,7 +31,7 @@ textarea {
     border: 2px solid var(--secondary-color);
     border-radius: 6px;
     color: var(--text-color);
-    font-family: 'Press Start 2P', cursive;
+    font-family: sans-serif;
     font-size: 0.9em;
     transition: border-color 0.3s ease;
 }
@@ -59,7 +59,7 @@ textarea {
     cursor: pointer;
     font-size: 1.1em;
     font-weight: bold;
-    font-family: 'Press Start 2P', cursive;
+    font-family: sans-serif;
     text-transform: uppercase;
     transition: all 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
