--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
     --primary-color: #4a4a4a;
@@ -19,7 +18,7 @@ html, body {
 }
 
 body {
-    font-family: 'Press Start 2P', cursive;
+    font-family: sans-serif;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
