--- a/header_Footer_Global/header_footer.css
+++ b/header_Footer_Global/header_footer.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
-    --primary-color: #4a4a4a;
-    --secondary-color: #50fa7b;
-    --background-color: #282a36;
-    --text-color: #f8f8f2;
+    --primary-color: #ffffffe8;
+    --secondary-color: #000000;
+    --background-color: #ffffff;
+    --text-color: #020202;
     --accent-color: #ff79c6;
 }
 
